--- a/src/main/resources/templates/VehicleMovement.html
+++ b/src/main/resources/templates/VehicleMovement.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
   <meta charset="utf-8">
@@ -305,86 +305,102 @@
     </header>
     <!--header end-->
 
-    <!--sidebar start-->
-    <aside>
-      <div id="sidebar" class="nav-collapse ">
-        <!-- sidebar menu start-->
-        <ul class="sidebar-menu">
-          <li class="">
-            <a class="" href="index.html">
+      <!--sidebar start-->
+      <aside>
+          <div id="sidebar" class="nav-collapse ">
+              <!-- sidebar menu start-->
+              <ul class="sidebar-menu">
+                  <li class="active">
+                      <a class="" th:href="@{/index}">
                           <i class="icon_house_alt"></i>
                           <span>Dashboard</span>
                       </a>
-          </li>
-          <li class="sub-menu">
-            <a href="javascript:;" class="">
+                  </li>
+                  <li class="sub-menu">
+                      <a href="javascript:;" class="">
                           <i class="icon_document_alt"></i>
-                          <span>Forms</span>
+                          <span>Vehicles</span>
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
-            <ul class="sub">
-              <li><a class="" href="form_component.html">Form Elements</a></li>
-              <li><a class="" href="form_validation.html">Form Validation</a></li>
-            </ul>
-          </li>
-          <li class="sub-menu">
-            <a href="javascript:;" class="">
+                      <ul class="sub">
+                          <li><a class="" th:href="@{/vehicle}">Vehicle Date</a></li>
+                          <li><a class="" th:href="@{/vehicleMaintenance}">Maintenance</a></li>
+                          <li><a class="" th:href="@{/vehiclemovement}">Movements</a></li>
+                          <li><a class="" th:href="@{/vehiclehire}">Hires</a></li>
+                      </ul>
+                  </li>
+                  <li class="sub-menu">
+                      <a href="javascript:;" class="">
                           <i class="icon_desktop"></i>
-                          <span>UI Fitures</span>
+                          <span>Parameters</span>
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
-            <ul class="sub">
-              <li><a class="" href="general.html">Components</a></li>
-              <li><a class="" href="buttons.html">Buttons</a></li>
-              <li><a class="" href="grids.html">Grids</a></li>
-            </ul>
-          </li>
-          <li>
-            <a class="" href="widgets.html">
-                          <i class="icon_genius"></i>
-                          <span>Widgets</span>
-                      </a>
-          </li>
-          <li>
-            <a class="" href="chart-chartjs.html">
-                          <i class="icon_piechart"></i>
-                          <span>Charts</span>
-
-                      </a>
-
-          </li>
-
-          <li class="sub-menu">
-            <a href="javascript:;" class="">
-                          <i class="icon_table"></i>
-                          <span>Tables</span>
+                      <ul class="sub">
+                          <li><a class="" th:href="@{/vehiclemake}">Vehicle Make</a></li>
+                          <li><a class="" th:href="@{/vehicletype}">Vehicle Types</a></li>
+                          <li><a class="" th:href="@{/vehiclemodel}">Vehicle Models</a></li>
+                          <li><a class="" th:href="@{/vehiclestatus}">Status Values</a></li>
+                      </ul>
+                  </li>
+                  <li class="sub-menu">
+                      <a href="javascript:;" class="">
+                          <i class="icon_desktop"></i>
+                          <span>People</span>
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
-            <ul class="sub">
-              <li><a class="" href="basic_table.html">Basic Table</a></li>
-            </ul>
-          </li>
+                      <ul class="sub">
+                          <li><a class="" th:href="@{/employee}">Employees</a></li>
+                          <li><a class="" th:href="@{/client}">Client</a></li>
+                          <li><a class="" th:href="@{/supplier}">Suppliers</a></li>
+                          <li><a class="" th:href="@{/contact}">Contact</a></li>
+                          <li><a class="" th:href="@{/user}">Users</a></li>
+                      </ul>
+                  </li>
+                  <li class="sub-menu">
+                      <a href="javascript:;" class="">
+                          <i class="icon_desktop"></i>
+                          <span>HR Settings</span>
+                          <span class="menu-arrow arrow_carrot-right"></span>
+                      </a>
+                      <ul class="sub">
+                          <li><a class="" th:href="@{/jobtitle}">Job Titles</a></li>
+                          <li><a class="" th:href="@{/employeetype}">Employee Types</a></li>
 
-          <li class="sub-menu ">
-            <a href="javascript:;" class="">
+                      </ul>
+                  </li>
+
+                  <li class="sub-menu">
+                      <a href="javascript:;" class="">
+                          <i class="icon_desktop"></i>
+                          <span>Accounts</span>
+                          <span class="menu-arrow arrow_carrot-right"></span>
+                      </a>
+                      <ul class="sub">
+                          <li><a class="" th:href="@{/invoice}">Invoices</a></li>
+                          <li><a class="" th:href="@{/invoicestatus}">Invoice Status Value</a></li>
+
+                      </ul>
+                  </li>
+
+                  <li class="sub-menu">
+                      <a href="javascript:;" class="">
                           <i class="icon_documents_alt"></i>
-                          <span>Pages</span>
+                          <span>Globals</span>
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
-            <ul class="sub">
-              <li><a class="" href="profile.html">Profile</a></li>
-              <li><a class="" href="login.html"><span>Login Page</span></a></li>
-              <li><a class="" href="contact.html"><span>Contact Page</span></a></li>
-              <li><a class="active" href="blank.html">Blank Page</a></li>
-              <li><a class="" href="404.html">404 Error</a></li>
-            </ul>
-          </li>
+                      <ul class="sub">
+                          <li><a class="" th:href="@{/country}">Countries</a></li>
+                          <li><a class="" th:href="@{/state}"><span>States</span></a></li>
+                          <li><a class="" th:href="@{/location}"><span>Locations</span></a></li>
+                      </ul>
+                  </li>
 
-        </ul>
-        <!-- sidebar menu end-->
-      </div>
-    </aside>
-    <!--sidebar end-->
+              </ul>
+              <!-- sidebar menu end-->
+          </div>
+      </aside>
+      <!--sidebar end-->
+
 
     <!--main content start-->
     <section id="main-content">
