--- a/src/main/resources/templates/state.html
+++ b/src/main/resources/templates/state.html
@@ -9,7 +9,7 @@
     <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
     <link rel="shortcut icon" href="img/favicon.png">
 
-    <title>Country Management Page</title>
+    <title>State Page</title>
 
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -416,52 +416,42 @@
                 </div>
             </div>
             <!-- page start-->
-            Page content goes here
-            <h1>
-                List of Countries
-            </h1>
-            <div class="row">
-                <div class="coL-Lg-12">
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal" >new country</button>
-                    <table class="table table-striped table-advance table-hover">
-                        <thead>
-                        <tr>
-                            <th>#id</th>
-                            <th> Description</th>
-                            <th>Capital</th>
-                            <th>Code</th>
-                            <th>continent</th>
-                            <th>nationality</th>
-                            <th>Actions</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr th:each="country:${country}">
-                            <td th:text="${country.id}"></td>
-                            <td th:text="${country.description}"></td>
-                            <td th:text="${country.capital}"></td>
-                            <td th:text="${country.code}"></td>
-                            <td th:text="${country.continent}"></td>
-                            <td th:text="${country.nationality}"></td>
-                            <td>
-                                <div class="btn-group">
-                                    <a th:href="@{/country/findById/(id=${country.id})}" class="btn btn-primary" id="editButton"><i class="icon_pencil-edit"></i></a>
+<!--            Page content goes here-->
 
-                                    <a class="btn btn-success" id="detailsButton" th:href="@{/country/findById/(id=${country.id})}"><i class="icon_document_alt"></i></a>
-                                    <a th:href="@{/country/delete/(id=${country.id})}" class="btn btn-danger" id="deleteButton"><i class="icon_close_alt2"></i></a>
-                                </div>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <section class="panel">
+                        <header class="panel-heading">
+                            State Details
+                        </header>
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal">Add New</button>
+
+                        <table class="table table-striped table-advance table-hover">
+                            <tbody>
+                            <tr>
+                                <th><i class="icon_table"></i> Id</th>
+                                <th><i class="icon_table"></i>Name</th>
+                                <th><i class="icon_table"></i> Details</th>
+                                <th><i class="icon_cogs"></i> Action</th>
+                            </tr>
+                            <tr th:each="state:${state}">
+                                <td th:text="${state.id}">Id</td>
+                                <td th:text="${state.name}">Name</td>
+                                <td th:text="${state.details}">Details</td>
+                                <td>
+                                    <div class="btn-group">
+                                        <a class="btn btn-primary" id="editButton" th:href="@{/state/findById/(id=${state.id})}"><i class="icon_pencil-edit"></i></a>
+                                        <a class="btn btn-success" id="detailsButton" th:href="@{/state/findById/(id=${state.id})}"><i class="icon_document_alt"></i></a>
+                                        <a class="btn btn-danger"  id="deleteButton" th:href="@{/state/delete/(id=${state.id})}"><i class="icon_close_alt2"></i></a>
+                                    </div>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </section>
                 </div>
             </div>
-
-
-
-
-
-
             <!-- page end-->
         </section>
     </section>
@@ -474,104 +464,126 @@
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
             -->
-
+            Designed by <a href="#">BootstrapMade</a>
         </div>
     </div>
 </section>
 <!-- container section end -->
+
 <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">New message</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form th:action="@{/country/addNew}" method="post">
+    <form th:action="@{/state/addNew}" method="post">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">New State Record</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+
+                <div class="modal-body">
+
                     <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Description:</label>
-                        <input type="text" class="form-control" id="recipient-name" name="description">
-                    </div>
-                    <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Capital:</label>
-                        <input type="text" class="form-control" id="recipient-name" name="capital">
-                    </div>
-                    <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Code:</label>
-                        <input type="text" class="form-control" id="recipient-name" name="code">
-                    </div>
-                    <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Continent:</label>
-                        <input type="text" class="form-control" id="recipient-name" name="continent">
-                    </div>
-                    <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Nationality:</label>
-                        <input type="text" class="form-control" id="recipient-name"name="nationality">
-                    </div>
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <label for="idAdd" class="col-form-label">Id:</label>
+                        <input type="text" class="form-control" id="idAdd" name="id" disabled>
                     </div>
 
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <div class="form-group">
+                        <label for="ddlCountryDetails" class="col-form-label">Country: </label>
+                        <select class="form-control" id="ddlCountryAdd" name="countryid">
+                            <option>-SELECT-</option>
+                            <option th:each="country : ${country}"
+                                    th:value="${country.id}"
+                                    th:text="${country.description}">
+                            </option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="nameAdd" class="col-form-label">Description:</label>
+                        <input type="text" class="form-control" id="nameAdd" name="name" required>
+                    </div>
 
+                    <div class="form-group">
+                        <label for="codeAdd" class="col-form-label">Code:</label>
+                        <input type="text" class="form-control" id="codeAdd" name="code" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="capitalAdd" class="col-form-label">Capital:</label>
+                        <input type="text" class="form-control" id="capitalAdd" name="capital" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="detailsEdit" class="col-form-label">Details:</label>
+                        <input type="text" class="form-control" id="detailsAdd" name="details">
+                    </div>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Save</button>
+                </div>
             </div>
         </div>
-    </div>
+    </form>
 </div>
+<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+    <form th:action="@{/state/update}" method="put">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editModalLabel">Edit State Record</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
 
-<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Update Country</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form th:action="@{/country/update}" method="put">
                     <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">ID:</label>
+                        <label for="idEdit" class="col-form-label">Id:</label>
                         <input type="text" class="form-control" id="idEdit" name="id" readonly>
                     </div>
 
                     <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Description:</label>
-                        <input type="text" class="form-control" id="descriptionEdit" name="description">
-                    </div>
-                    <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Capital:</label>
-                        <input type="text" class="form-control" id="capitalEdit" name="capital">
-                    </div>
-                    <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Code:</label>
-                        <input type="text" class="form-control" id="codeEdit" name="code">
-                    </div>
-                    <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Continent:</label>
-                        <input type="text" class="form-control" id="continentEdit" name="continent">
-                    </div>
-                    <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Nationality:</label>
-                        <input type="text" class="form-control" id="nationalityEdit"name="nationality">
-                    </div>
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <label for="ddlCountryDetails" class="col-form-label">Country: </label>
+                        <select class="form-control" id="ddlCountryEdit" name="countryid">
+                            <option>-SELECT-</option>
+                            <option th:each="country : ${country}"
+                                    th:value="${country.id}"
+                                    th:text="${country.description}">
+                            </option>
+                        </select>
                     </div>
 
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <div class="form-group">
+                        <label for="nameEdit" class="col-form-label">Description:</label>
+                        <input type="text" class="form-control" id="nameEdit" name="name" required>
+                    </div>
 
+
+                    <div class="form-group">
+                        <label for="codeEdit" class="col-form-label">Code:</label>
+                        <input type="text" class="form-control" id="codeEdit" name="code" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="capitalEdit" class="col-form-label">Capital:</label>
+                        <input type="text" class="form-control" id="capitalEdit" name="capital" required>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label for="detailsEdit" class="col-form-label">Details:</label>
+                        <input type="text" class="form-control" id="detailsEdit" name="details">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Save</button>
+                </div>
             </div>
         </div>
-    </div>
+    </form>
 </div>
 
 <div class="modal fade" id="detailsModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
@@ -579,7 +591,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="editModalLabel">Country Details</h5>
+                    <h5 class="modal-title" id="editModalLabel">State Details</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -592,13 +604,34 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="col-form-label">Description:</label>
-                        <input type="text" class="form-control" id="descriptionDetails" name="description" readonly>
+                        <label for="ddlCountryDetails" class="col-form-label">Country: </label>
+                        <select class="form-control" id="ddlCountryDetails" name="countryid">
+                            <option>-SELECT-</option>
+                            <option th:each="country : ${country}"
+                                    th:value="${country.id}"
+                                    th:text="${country.description}">
+                            </option>
+                        </select>
                     </div>
 
                     <div class="form-group">
-                        <label class="col-form-label">Code:</label>
-                        <input type="text" class="form-control" id="codeDetails" name="code" readonly>
+                        <label class="col-form-label">Name:</label>
+                        <input type="text" class="form-control" id="nameDetails" name="name" readonly>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="codeDetails" class="col-form-label">Code:</label>
+                        <input type="text" class="form-control" id="codeDetails" name="code" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="capitalDetails" class="col-form-label">Capital:</label>
+                        <input type="text" class="form-control" id="capitalDetails" name="capital" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-form-label">Details:</label>
+                        <input type="text" class="form-control" id="detailsDetails" name="details" readonly>
                     </div>
 
                     <div class="form-group">
@@ -619,22 +652,21 @@
     </form>
 </div>
 
-
-<div class="modal" id="deleteModal" tabindex="-1" role="dialog">
+<div class="modal" tabindex="-1" role="dialog" id="deleteModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Confirm Delete</h5>
+                <h5 class="modal-title">Confirm delete</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <p>Are you sure you want to delete this record</p>
+                <p>Are you sure you want to delete this record?</p>
             </div>
             <div class="modal-footer">
-                <a  class="btn btn-primary" id="confirmDeleteButton" href="">Yes,Delete</a>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <a href="" class="btn btn-primary" id="delRef">Yes, Delete</a>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
@@ -643,12 +675,12 @@
 <!-- javascripts -->
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<!-- nice scroll -->
+<!-- nicescroll -->
 <script src="js/jquery.scrollTo.min.js"></script>
 <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
 <!--custome script for all page-->
 <script src="js/scripts.js"></script>
-<script src="js/country.js"></script>
+<script type="text/javascript" src="static/js/state.js" th:src="@{/js/state.js}"></script>
 
 
 </body>
