--- a/src/main/resources/templates/Contact.html
+++ b/src/main/resources/templates/Contact.html
@@ -325,8 +325,8 @@
                       <ul class="sub">
                           <li><a class="" th:href="@{/vehicle}">Vehicle Date</a></li>
                           <li><a class="" th:href="@{/vehicleMaintenance}">Maintenance</a></li>
-                          <li><a class="" th:href="@{/vehiclemovement}">Movements</a></li>
-                          <li><a class="" th:href="@{/vehiclehire}">Hires</a></li>
+                          <li><a class="" th:href="@{/vehicleMovement}">Movements</a></li>
+                          <li><a class="" th:href="@{/vehicleHire}">Hires</a></li>
                       </ul>
                   </li>
                   <li class="sub-menu">
@@ -336,10 +336,10 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" th:href="@{/vehiclemake}">Vehicle Make</a></li>
-                          <li><a class="" th:href="@{/vehicletype}">Vehicle Types</a></li>
-                          <li><a class="" th:href="@{/vehiclemodel}">Vehicle Models</a></li>
-                          <li><a class="" th:href="@{/vehiclestatus}">Status Values</a></li>
+                          <li><a class="" th:href="@{/vehicleMake}">Vehicle Make</a></li>
+                          <li><a class="" th:href="@{/vehicleType}">Vehicle Types</a></li>
+                          <li><a class="" th:href="@{/vehicleModel}">Vehicle Models</a></li>
+                          <li><a class="" th:href="@{/vehicleStatus}">Status Values</a></li>
                       </ul>
                   </li>
                   <li class="sub-menu">
@@ -363,8 +363,8 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" th:href="@{/jobtitle}">Job Titles</a></li>
-                          <li><a class="" th:href="@{/employeetype}">Employee Types</a></li>
+                          <li><a class="" th:href="@{/jobTitle}">Job Titles</a></li>
+                          <li><a class="" th:href="@{/employeeType}">Employee Types</a></li>
 
                       </ul>
                   </li>
@@ -377,7 +377,7 @@
                       </a>
                       <ul class="sub">
                           <li><a class="" th:href="@{/invoice}">Invoices</a></li>
-                          <li><a class="" th:href="@{/invoicestatus}">Invoice Status Value</a></li>
+                          <li><a class="" th:href="@{/invoiceStatus}">Invoice Status Value</a></li>
 
                       </ul>
                   </li>
@@ -416,35 +416,200 @@
           </div>
         </div>
         <!-- page start-->
-        Page content goes here
-          <h1>
-              List of Contact
-          </h1>
-        <!-- page end-->
+          <div class="row">
+              <div class="col-lg-12">
+                  <section class="panel">
+                      <header class="panel-heading">
+                          Advanced Table
+                      </header>
+                      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal">Add New</button>
+
+                      <table class="table table-striped table-advance table-hover">
+                          <tbody>
+                          <tr>
+                              <th><i class="icon_profile"></i> Name</th>
+                              <th><i class="icon_mail_alt"></i> Email</th>
+                              <th><i class="icon_mobile"></i> Phone</th>
+                              <th><i class="icon_cogs"></i> Action</th>
+                          </tr>
+                          <tr th:each="contact:${contact}">
+                              <td th:text="${contact.firstname} + ' ' + ${contact.lastname}">Name</td>
+                              <td th:text="${contact.email}">Email</td>
+                              <td th:text="${contact.phone}">Phone</td>
+                              <td>
+                                  <div class="btn-group">
+                                      <a class="btn btn-primary" id="editButton" th:href="@{/contact/findById/(id=${contact.id})}"><i class="icon_pencil-edit"></i></a>
+                                      <a class="btn btn-success" id="detailsButton" th:href="@{/contact/findById/(id=${contact.id})}"><i class="icon_document_alt"></i></a>
+                                      <a class="btn btn-danger" id="deleteButton" th:href="@{/contact/delete/(id=${contact.id})}"><i class="icon_close_alt2"></i></a>
+                                  </div>
+                              </td>
+                          </tr>
+                          </tbody>
+                      </table>
+                  </section>
+              </div>
+          </div>
+          <!-- page end-->
       </section>
     </section>
-    <!--main content end-->
-    <div class="text-right">
-      <div class="credits">
-          <!--
-            All the links in the footer should remain intact.
-            You can delete the links only if you purchased the pro version.
-            Licensing information: https://bootstrapmade.com/license/
-            Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
-          -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
-    </div>
+      <!--main content end-->
+      <div class="text-right">
+          <div class="credits">
+              <!--
+                All the links in the footer should remain intact.
+                You can delete the links only if you purchased the pro version.
+                Licensing information: https://bootstrapmade.com/license/
+                Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
+              -->
+
+          </div>
+      </div>
   </section>
   <!-- container section end -->
+
+  <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <form th:action="@{/contact/addNew}" method="post">
+          <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">New Contact Record</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+
+                  <div class="modal-body">
+                      <div class="form-group">
+                          <label for="txtIdAdd" class="col-form-label">Id:</label>
+                          <input type="text" class="form-control" id="txtIdAdd" name="id" disabled>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="txtFirstnameAdd" class="col-form-label">Firstname:</label>
+                          <input type="text" class="form-control" id="txtFirstnameAdd" name="firstname" required>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="txtLastNameAdd" class="col-form-label">Lastname:</label>
+                          <input type="text" class="form-control" id="txtLastNameAdd" name="lastname">
+                      </div>
+
+                      <div class="form-group">
+                          <label for="txtEmailAdd" class="col-form-label">Email:</label>
+                          <input type="text" class="form-control" id="txtEmailAdd" name="email" required>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="txtMobileAdd" class="col-form-label">Mobile:</label>
+                          <input type="text" class="form-control" id="txtMobileAdd" name="mobile">
+                      </div>
+                      <div class="form-group">
+                          <label for="txtPhoneAdd" class="col-form-label">Phone:</label>
+                          <input type="text" class="form-control" id="txtPhoneAdd" name="phone" required>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="txtRemarksAdd" class="col-form-label">Remarks:</label>
+                          <input type="text" class="form-control" id="txtRemarksAdd" name="remarks">
+                      </div>
+                  </div>
+
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      <button type="submit" class="btn btn-primary">Save</button>
+                  </div>
+              </div>
+          </div>
+      </form>
+  </div>
+
+  <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <form th:action="@{/contact/update}" method="put">
+          <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">Edit Contact Record</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+
+                  <div class="modal-body">
+                      <div class="form-group">
+                          <label for="txtIdEdit" class="col-form-label">Id:</label>
+                          <input type="text" class="form-control" id="txtIdEdit" name="id" readonly>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="txtFirstnameEdit" class="col-form-label">Firstname:</label>
+                          <input type="text" class="form-control" id="txtFirstnameEdit" name="firstname" required>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="txtLastnameEdit" class="col-form-label">Lastname:</label>
+                          <input type="text" class="form-control" id="txtLastnameEdit" name="lastname">
+                      </div>
+
+                      <div class="form-group">
+                          <label for="txtEmailEdit" class="col-form-label">Email:</label>
+                          <input type="text" class="form-control" id="txtEmailEdit" name="email" required>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="txtMobileEdit" class="col-form-label">Mobile:</label>
+                          <input type="text" class="form-control" id="txtMobileEdit" name="mobile">
+                      </div>
+                      <div class="form-group">
+                          <label for="txtPhoneEdit" class="col-form-label">Phone:</label>
+                          <input type="text" class="form-control" id="txtPhoneEdit" name="phone" required>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="txtRemarksEdit" class="col-form-label">Remarks:</label>
+                          <input type="text" class="form-control" id="txtRemarksEdit" name="remarks">
+                      </div>
+                  </div>
+
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      <button type="submit" class="btn btn-primary">Save</button>
+                  </div>
+              </div>
+          </div>
+      </form>
+  </div>
+
+  <div class="modal" tabindex="-1" role="dialog" id="deleteModal">
+      <div class="modal-dialog" role="document">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title">Confirm delete</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+              <div class="modal-body">
+                  <p>Are you sure you want to delete this record?</p>
+              </div>
+              <div class="modal-footer">
+                  <a href="" class="btn btn-primary" id="delRef">Yes, Delete</a>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+          </div>
+      </div>
+  </div>
+
+
   <!-- javascripts -->
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <!-- nice scroll -->
+  <!-- nicescroll -->
   <script src="js/jquery.scrollTo.min.js"></script>
   <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
   <!--custome script for all page-->
   <script src="js/scripts.js"></script>
+  <script src="js/contact.js"></script>
+  <script type="text/javascript" src="static/js/contact.js" th:src="@{/js/contact.js}"></script>
 
 
 </body>
