--- a/src/main/resources/templates/Invoice.html
+++ b/src/main/resources/templates/Invoice.html
@@ -325,8 +325,8 @@
                       <ul class="sub">
                           <li><a class="" th:href="@{/vehicle}">Vehicle Date</a></li>
                           <li><a class="" th:href="@{/vehicleMaintenance}">Maintenance</a></li>
-                          <li><a class="" th:href="@{/vehiclemovement}">Movements</a></li>
-                          <li><a class="" th:href="@{/vehiclehire}">Hires</a></li>
+                          <li><a class="" th:href="@{/vehicleMovement}">Movements</a></li>
+                          <li><a class="" th:href="@{/vehicleHire}">Hires</a></li>
                       </ul>
                   </li>
                   <li class="sub-menu">
@@ -336,10 +336,10 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" th:href="@{/vehiclemake}">Vehicle Make</a></li>
-                          <li><a class="" th:href="@{/vehicletype}">Vehicle Types</a></li>
-                          <li><a class="" th:href="@{/vehiclemodel}">Vehicle Models</a></li>
-                          <li><a class="" th:href="@{/vehiclestatus}">Status Values</a></li>
+                          <li><a class="" th:href="@{/vehicleMake}">Vehicle Make</a></li>
+                          <li><a class="" th:href="@{/vehicleType}">Vehicle Types</a></li>
+                          <li><a class="" th:href="@{/vehicleModel}">Vehicle Models</a></li>
+                          <li><a class="" th:href="@{/vehicleStatus}">Status Values</a></li>
                       </ul>
                   </li>
                   <li class="sub-menu">
@@ -363,8 +363,8 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" th:href="@{/jobtitle}">Job Titles</a></li>
-                          <li><a class="" th:href="@{/employeetype}">Employee Types</a></li>
+                          <li><a class="" th:href="@{/jobTitle}">Job Titles</a></li>
+                          <li><a class="" th:href="@{/employeeType}">Employee Types</a></li>
 
                       </ul>
                   </li>
@@ -377,7 +377,7 @@
                       </a>
                       <ul class="sub">
                           <li><a class="" th:href="@{/invoice}">Invoices</a></li>
-                          <li><a class="" th:href="@{/invoicestatus}">Invoice Status Value</a></li>
+                          <li><a class="" th:href="@{/invoiceStatus}">Invoice Status Value</a></li>
 
                       </ul>
                   </li>
@@ -416,35 +416,266 @@
           </div>
         </div>
         <!-- page start-->
-        Page content goes here
-          <h1>
-              List of Invoice
-          </h1>
-        <!-- page end-->
+          <div class="row">
+              <div class="col-lg-12">
+                  <section class="panel">
+                      <header class="panel-heading">
+                          Invoice List
+                      </header>
+                      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal">Add New</button>
+
+                      <table class="table table-striped table-advance table-hover">
+                          <tbody>
+                          <tr>
+                              <th><i class="icon_table"></i> Id</th>
+                              <th><i class="icon_table"></i>Date</th>
+                              <th><i class="icon_table"></i> Client</th>
+                              <th><i class="icon_table"></i>Remarks</th>
+                              <th><i class="icon_cogs"></i> Action</th>
+                          </tr>
+                          <tr th:each="invoice:${invoice}">
+                              <td th:text="${invoice.id}">Id</td>
+                              <td th:text="${invoice.invoiceDate}">Invoice Date</td>
+                              <td th:text="${invoice.client.name}">Client</td>
+                              <td th:text="${invoice.remarks}">Remarks</td>
+                              <td>
+                                  <div class="btn-group">
+                                      <a class="btn btn-primary" id="editButton" th:href="@{/invoice/findById/(id=${invoice.id})}"><i class="icon_pencil-edit"></i></a>
+                                      <a class="btn btn-success" id="detailsButton" th:href="@{/invoice/findById/(id=${invoice.id})}"><i class="icon_document_alt"></i></a>
+                                      <a class="btn btn-danger"  id="deleteButton" th:href="@{/invoice/delete/(id=${invoice.id})}"><i class="icon_close_alt2"></i></a>
+                                  </div>
+                              </td>
+                          </tr>
+                          </tbody>
+                      </table>
+                  </section>
+              </div>
+          </div>
+          <!-- page end-->
       </section>
     </section>
-    <!--main content end-->
-    <div class="text-right">
-      <div class="credits">
-          <!--
-            All the links in the footer should remain intact.
-            You can delete the links only if you purchased the pro version.
-            Licensing information: https://bootstrapmade.com/license/
-            Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
-          -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
-    </div>
+      <!--main content end-->
+      <div class="text-right">
+          <div class="credits">
+              <!--
+                All the links in the footer should remain intact.
+                You can delete the links only if you purchased the pro version.
+                Licensing information: https://bootstrapmade.com/license/
+                Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
+              -->
+
+          </div>
+      </div>
   </section>
   <!-- container section end -->
+
+  <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <form th:action="@{/invoice/addNew}" method="post">
+          <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">New Invoice Record</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+
+                  <div class="modal-body">
+
+                      <div class="form-group">
+                          <label for="idAdd" class="col-form-label">Id:</label>
+                          <input type="text" class="form-control" id="idAdd" name="id" disabled>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="ddlClientAdd" class="col-form-label">Client: </label>
+                          <select class="form-control" id="ddlClientAdd" name="clientid">
+                              <option>-SELECT-</option>
+                              <option th:each="client : ${client}"
+                                      th:value="${client.id}"
+                                      th:text="${client.name}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="invoiceDateAdd" class="col-form-label">Invoice Date:</label>
+                          <input type="date" class="form-control" id="invoiceDateAdd" name="invoiceDate">
+                      </div>
+
+                      <div class="form-group">
+                          <label for="ddlInvoiceStatsAdd" class="col-form-label">Invoice Status: </label>
+                          <select class="form-control" id="ddlInvoiceStatusAdd" name="invoicestatusid">
+                              <option>-SELECT-</option>
+                              <option th:each="invoiceStatus : ${invoiceStatus}"
+                                      th:value="${invoiceStatus.id}"
+                                      th:text="${invoiceStatus.description}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="remarksAdd" class="col-form-label">Remarks:</label>
+                          <input type="text" class="form-control" id="remarksAdd" name="remarks">
+                      </div>
+                  </div>
+
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      <button type="submit" class="btn btn-primary">Save</button>
+                  </div>
+              </div>
+          </div>
+      </form>
+  </div>
+
+  <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+      <form th:action="@{/invoice/update}" method="put">
+          <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="editModalLabel">Edit Invoice Record</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+                  <div class="modal-body">
+
+                      <div class="form-group">
+                          <label for="idEdit" class="col-form-label">Id:</label>
+                          <input type="text" class="form-control" id="idEdit" name="id" readonly>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="ddlClientEdit" class="col-form-label">Client: </label>
+                          <select class="form-control" id="ddlClientEdit" name="clientid">
+                              <option>-SELECT-</option>
+                              <option th:each="client : ${client}"
+                                      th:value="${client.id}"
+                                      th:text="${client.name}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="invoiceDateEdit" class="col-form-label">Invoice Date:</label>
+                          <input type="date" class="form-control" id="invoiceDateEdit" name="invoiceDate">
+                      </div>
+
+                      <div class="form-group">
+                          <label for="ddlInvoiceStatusEdit" class="col-form-label">Invoice Status: </label>
+                          <select class="form-control" id="ddlInvoiceStatusEdit" name="invoicestatusid">
+                              <option>-SELECT-</option>
+                              <option th:each="invoiceStatus : ${invoiceStatus}"
+                                      th:value="${invoiceStatus.id}"
+                                      th:text="${invoiceStatus.description}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="remarksEdit" class="col-form-label">Remarks:</label>
+                          <input type="text" class="form-control" id="remarksEdit" name="remarks">
+                      </div>
+
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      <button type="submit" class="btn btn-primary">Save</button>
+                  </div>
+              </div>
+          </div>
+      </form>
+  </div>
+
+  <div class="modal fade" id="detailsModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+      <form>
+          <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="editModalLabel">Locations Details</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+                  <div class="modal-body">
+
+                      <div class="form-group">
+                          <label for="idDetails" class="col-form-label">Id:</label>
+                          <input type="text" class="form-control" id="idDetails" name="id" disabled>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="ddlClientDetails" class="col-form-label">Client: </label>
+                          <select class="form-control" id="ddlClientDetails" name="clientid">
+                              <option>-SELECT-</option>
+                              <option th:each="client : ${client}"
+                                      th:value="${client.id}"
+                                      th:text="${client.name}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="invoiceDateDetails" class="col-form-label">Invoice Date:</label>
+                          <input type="date" class="form-control" id="invoiceDateDetails" name="invoiceDate">
+                      </div>
+
+                      <div class="form-group">
+                          <label for="ddlInvoiceStatusDetails" class="col-form-label">Invoice Status: </label>
+                          <select class="form-control" id="ddlInvoiceStatusDetails" name="invoicestatusid">
+                              <option>-SELECT-</option>
+                              <option th:each="invoiceStatus : ${invoiceStatus}"
+                                      th:value="${invoiceStatus.id}"
+                                      th:text="${invoiceStatus.description}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="remarksDetails" class="col-form-label">Remarks:</label>
+                          <input type="text" class="form-control" id="remarksDetails" name="remarks">
+                      </div>
+
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  </div>
+              </div>
+          </div>
+      </form>
+  </div>
+
+  <div class="modal" tabindex="-1" role="dialog" id="deleteModal">
+      <div class="modal-dialog" role="document">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title">Confirm delete</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+              <div class="modal-body">
+                  <p>Are you sure you want to delete this record?</p>
+              </div>
+              <div class="modal-footer">
+                  <a href="" class="btn btn-primary" id="delRef">Yes, Delete</a>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+          </div>
+      </div>
+  </div>
+
   <!-- javascripts -->
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <!-- nice scroll -->
+  <!-- nicescroll -->
   <script src="js/jquery.scrollTo.min.js"></script>
   <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
   <!--custome script for all page-->
   <script src="js/scripts.js"></script>
+  <script src="js/invoice.js"></script>
+  <script type="text/javascript" src="static/js/invoice.js" th:src="@{/js/invoice.js}"></script>
 
 
 </body>
