--- a/src/main/resources/templates/VehicleMaintenance.html
+++ b/src/main/resources/templates/VehicleMaintenance.html
@@ -325,8 +325,8 @@
                       <ul class="sub">
                           <li><a class="" th:href="@{/vehicle}">Vehicle Date</a></li>
                           <li><a class="" th:href="@{/vehicleMaintenance}">Maintenance</a></li>
-                          <li><a class="" th:href="@{/vehiclemovement}">Movements</a></li>
-                          <li><a class="" th:href="@{/vehiclehire}">Hires</a></li>
+                          <li><a class="" th:href="@{/vehicleMovement}">Movements</a></li>
+                          <li><a class="" th:href="@{/vehicleHire}">Hires</a></li>
                       </ul>
                   </li>
                   <li class="sub-menu">
@@ -336,10 +336,10 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" th:href="@{/vehiclemake}">Vehicle Make</a></li>
-                          <li><a class="" th:href="@{/vehicletype}">Vehicle Types</a></li>
-                          <li><a class="" th:href="@{/vehiclemodel}">Vehicle Models</a></li>
-                          <li><a class="" th:href="@{/vehiclestatus}">Status Values</a></li>
+                          <li><a class="" th:href="@{/vehicleMake}">Vehicle Make</a></li>
+                          <li><a class="" th:href="@{/vehicleType}">Vehicle Types</a></li>
+                          <li><a class="" th:href="@{/vehicleModel}">Vehicle Models</a></li>
+                          <li><a class="" th:href="@{/vehicleStatus}">Status Values</a></li>
                       </ul>
                   </li>
                   <li class="sub-menu">
@@ -363,8 +363,8 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" th:href="@{/jobtitle}">Job Titles</a></li>
-                          <li><a class="" th:href="@{/employeetype}">Employee Types</a></li>
+                          <li><a class="" th:href="@{/jobTitle}">Job Titles</a></li>
+                          <li><a class="" th:href="@{/employeeType}">Employee Types</a></li>
 
                       </ul>
                   </li>
@@ -377,7 +377,7 @@
                       </a>
                       <ul class="sub">
                           <li><a class="" th:href="@{/invoice}">Invoices</a></li>
-                          <li><a class="" th:href="@{/invoicestatus}">Invoice Status Value</a></li>
+                          <li><a class="" th:href="@{/invoiceStatus}">Invoice Status Value</a></li>
 
                       </ul>
                   </li>
@@ -401,7 +401,6 @@
       </aside>
       <!--sidebar end-->
 
-
       <!--main content start-->
     <section id="main-content">
       <section class="wrapper">
@@ -416,35 +415,302 @@
           </div>
         </div>
         <!-- page start-->
-        Page content goes here
-          <h1>
-              List of VehicleMaintenance
-          </h1>
-        <!-- page end-->
+          <div class="row">
+              <div class="col-lg-12">
+                  <section class="panel">
+                      <header class="panel-heading">
+                          Vehicle Maintenance Record
+                      </header>
+                      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal">Add New</button>
+
+                      <table class="table table-striped table-advance table-hover">
+                          <tbody>
+                          <tr>
+                              <th><i class="icon_table"></i> Id</th>
+                              <th><i class="icon_table"></i>Vehicle</th>
+                              <th><i class="icon_table"></i>Start Date</th>
+                              <th><i class="icon_table"></i> Remarks</th>
+                              <th><i class="icon_cogs"></i> Action</th>
+                          </tr>
+                          <tr th:each="vehicleMaintenance:${vehicleMaintenance}">
+                              <td th:text="${vehicleMaintenance.id}">Id</td>
+                              <td th:text="${vehicleMaintenance.vehicle.name}">Vehicle</td>
+                              <td th:text="${vehicleMaintenance.startDate}">Start Date</td>
+                              <td th:text="${vehicleMaintenance.remarks}">Remarks</td>
+                              <td>
+                                  <div class="btn-group">
+                                      <a class="btn btn-primary" id="editButton" th:href="@{/vehicleMaintenance/findById/(id=${vehicleMaintenance.id})}"><i class="icon_pencil-edit"></i></a>
+                                      <a class="btn btn-success" id="detailsButton" th:href="@{/vehicleMaintenance/findById/(id=${vehicleMaintenance.id})}"><i class="icon_document_alt"></i></a>
+                                      <a class="btn btn-danger"  id="deleteButton" th:href="@{/vehicleMaintenance/delete/(id=${vehicleMaintenance.id})}"><i class="icon_close_alt2"></i></a>
+                                  </div>
+                              </td>
+                          </tr>
+                          </tbody>
+                      </table>
+                  </section>
+              </div>
+          </div>
+          <!-- page end-->
       </section>
     </section>
-    <!--main content end-->
-    <div class="text-right">
-      <div class="credits">
-          <!--
-            All the links in the footer should remain intact.
-            You can delete the links only if you purchased the pro version.
-            Licensing information: https://bootstrapmade.com/license/
-            Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
-          -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
-    </div>
+      <!--main content end-->
+      <div class="text-right">
+          <div class="credits">
+              <!--
+                All the links in the footer should remain intact.
+                You can delete the links only if you purchased the pro version.
+                Licensing information: https://bootstrapmade.com/license/
+                Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
+              -->
+
+          </div>
+      </div>
   </section>
   <!-- container section end -->
+
+  <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <form th:action="@{/vehicleMaintenance/addNew}" method="post">
+          <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">New Maintenance Record</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+
+                  <div class="modal-body">
+
+                      <div class="form-group">
+                          <label for="idAdd" class="col-form-label">Id:</label>
+                          <input type="text" class="form-control" id="idAdd" name="id" disabled>
+                      </div>
+
+
+                      <div class="form-group">
+                          <label for="ddlVehicleAdd" class="col-form-label">Vehicle: </label>
+                          <select class="form-control" id="ddlVehicleAdd" name="vehicleid">
+                              <option>-SELECT-</option>
+                              <option th:each="vehicle : ${vehicle}"
+                                      th:value="${vehicle.id}"
+                                      th:text="${vehicle.description}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="startDateAdd" class="col-form-label">Start Date:</label>
+                          <input type="date" class="form-control" id="startDateAdd" name="startDate">
+                      </div>
+
+                      <div class="form-group">
+                          <label for="remarksAdd" class="col-form-label">remarks:</label>
+                          <textarea class="form-control" id="remarksAdd" name="remarks" rows="3"></textarea>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="endDateAdd" class="col-form-label">End Date:</label>
+                          <input type="date" class="form-control" id="endDateAdd" name="endDate"></input>
+                      </div>
+
+
+                      <div class="form-group">
+                          <label for="ddlSupplierAdd" class="col-form-label">Supplier: </label>
+                          <select class="form-control" id="ddlSupplierAdd" name="supplierid">
+                              <option>-SELECT-</option>
+                              <option th:each="supplier : ${supplier}"
+                                      th:value="${supplier.id}"
+                                      th:text="${supplier.name}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="priceAdd" class="col-form-label">Price:</label>
+                          <input type="text" class="form-control" id="priceAdd" name="price">
+                      </div>
+                  </div>
+
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      <button type="submit" class="btn btn-primary">Save</button>
+                  </div>
+              </div>
+          </div>
+      </form>
+  </div>
+
+  <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+      <form th:action="@{/vehicleMaintenance/update}" method="put">
+          <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="editModalLabel">Edit Location Record</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+                  <div class="modal-body">
+
+                      <div class="form-group">
+                          <label for="idEdit" class="col-form-label">Id:</label>
+                          <input type="text" class="form-control" id="idEdit" name="id" readonly>
+                      </div>
+
+
+                      <div class="form-group">
+                          <label for="ddlVehicleEdit" class="col-form-label">Vehicle: </label>
+                          <select class="form-control" id="ddlVehicleEdit" name="vehicleid">
+                              <option>-SELECT-</option>
+                              <option th:each="vehicle : ${vehicle}"
+                                      th:value="${vehicle.id}"
+                                      th:text="${vehicle.description}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="startDateEdit" class="col-form-label">Start Date:</label>
+                          <input type="date" class="form-control" id="startDateEdit" name="startDate">
+                      </div>
+
+                      <div class="form-group">
+                          <label for="remarksEdit" class="col-form-label">remarks:</label>
+                          <textarea class="form-control" id="remarksEdit" name="remarks" rows="3"></textarea>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="endDateEdit" class="col-form-label">End Date:</label>
+                          <input type="date" class="form-control" id="endDateEdit" name="endDate"></input>
+                      </div>
+
+
+                      <div class="form-group">
+                          <label for="ddlSupplierEdit" class="col-form-label">Supplier: </label>
+                          <select class="form-control" id="ddlSupplierEdit" name="supplierid">
+                              <option>-SELECT-</option>
+                              <option th:each="supplier : ${supplier}"
+                                      th:value="${supplier.id}"
+                                      th:text="${supplier.name}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="priceEdit" class="col-form-label">Price:</label>
+                          <input type="text" class="form-control" id="priceEdit" name="price">
+                      </div>
+
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      <button type="submit" class="btn btn-primary">Save</button>
+                  </div>
+              </div>
+          </div>
+      </form>
+  </div>
+
+  <div class="modal fade" id="detailsModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+      <form>
+          <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="editModalLabel">Vehicle Maintenance Details</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+                  <div class="modal-body">
+
+                      <div class="form-group">
+                          <label for="idDetails" class="col-form-label">Id:</label>
+                          <input type="text" class="form-control" id="idDetails" name="id" disabled>
+                      </div>
+
+
+                      <div class="form-group">
+                          <label for="ddlVehicleDetails" class="col-form-label">Vehicle: </label>
+                          <select class="form-control" id="ddlVehicleDetails" name="vehicleid">
+                              <option>-SELECT-</option>
+                              <option th:each="vehicle : ${vehicle}"
+                                      th:value="${vehicle.id}"
+                                      th:text="${vehicle.description}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="startDateDetails" class="col-form-label">Start Date:</label>
+                          <input type="text" class="form-control" id="startDateDetails" name="startDate">
+                      </div>
+
+                      <div class="form-group">
+                          <label for="remarksDetails" class="col-form-label">remarks:</label>
+                          <textarea class="form-control" id="remarksDetails" name="remarks" rows="3"></textarea>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="endDateDetails" class="col-form-label">End Date:</label>
+                          <input type="date" class="form-control" id="endDateDetails" name="endDate"></input>
+                      </div>
+
+
+                      <div class="form-group">
+                          <label for="ddlSupplierDetails" class="col-form-label">Supplier: </label>
+                          <select class="form-control" id="ddlSupplierDetails" name="supplierid">
+                              <option>-SELECT-</option>
+                              <option th:each="supplier : ${supplier}"
+                                      th:value="${supplier.id}"
+                                      th:text="${supplier.name}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="priceDetails" class="col-form-label">Price:</label>
+                          <input type="text" class="form-control" id="priceDetails" name="price">
+                      </div>
+
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  </div>
+              </div>
+          </div>
+      </form>
+  </div>
+
+  <div class="modal" tabindex="-1" role="dialog" id="deleteModal">
+      <div class="modal-dialog" role="document">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title">Confirm delete</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+              <div class="modal-body">
+                  <p>Are you sure you want to delete this record?</p>
+              </div>
+              <div class="modal-footer">
+                  <a href="" class="btn btn-primary" id="confirmDeleteButton">Yes, Delete</a>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+          </div>
+      </div>
+  </div>
+
   <!-- javascripts -->
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <!-- nice scroll -->
+  <!-- nicescroll -->
   <script src="js/jquery.scrollTo.min.js"></script>
   <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
   <!--custome script for all page-->
   <script src="js/scripts.js"></script>
+  <script src="js/vehicleMaintenance.js"></script>
+  <script type="text/javascript" src="static/js/vehicleMaintenance.js" th:src="@{/js/vehicleMaintenance.js}"></script>
 
 
 </body>
