--- a/src/main/resources/templates/VehicleMovement.html
+++ b/src/main/resources/templates/VehicleMovement.html
@@ -325,8 +325,8 @@
                       <ul class="sub">
                           <li><a class="" th:href="@{/vehicle}">Vehicle Date</a></li>
                           <li><a class="" th:href="@{/vehicleMaintenance}">Maintenance</a></li>
-                          <li><a class="" th:href="@{/vehiclemovement}">Movements</a></li>
-                          <li><a class="" th:href="@{/vehiclehire}">Hires</a></li>
+                          <li><a class="" th:href="@{/vehicleMovement}">Movements</a></li>
+                          <li><a class="" th:href="@{/vehicleHire}">Hires</a></li>
                       </ul>
                   </li>
                   <li class="sub-menu">
@@ -336,10 +336,10 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" th:href="@{/vehiclemake}">Vehicle Make</a></li>
-                          <li><a class="" th:href="@{/vehicletype}">Vehicle Types</a></li>
-                          <li><a class="" th:href="@{/vehiclemodel}">Vehicle Models</a></li>
-                          <li><a class="" th:href="@{/vehiclestatus}">Status Values</a></li>
+                          <li><a class="" th:href="@{/vehicleMake}">Vehicle Make</a></li>
+                          <li><a class="" th:href="@{/vehicleType}">Vehicle Types</a></li>
+                          <li><a class="" th:href="@{/vehicleModel}">Vehicle Models</a></li>
+                          <li><a class="" th:href="@{/vehicleStatus}">Status Values</a></li>
                       </ul>
                   </li>
                   <li class="sub-menu">
@@ -363,8 +363,8 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" th:href="@{/jobtitle}">Job Titles</a></li>
-                          <li><a class="" th:href="@{/employeetype}">Employee Types</a></li>
+                          <li><a class="" th:href="@{/jobTitle}">Job Titles</a></li>
+                          <li><a class="" th:href="@{/employeeType}">Employee Types</a></li>
 
                       </ul>
                   </li>
@@ -377,7 +377,7 @@
                       </a>
                       <ul class="sub">
                           <li><a class="" th:href="@{/invoice}">Invoices</a></li>
-                          <li><a class="" th:href="@{/invoicestatus}">Invoice Status Value</a></li>
+                          <li><a class="" th:href="@{/invoiceStatus}">Invoice Status Value</a></li>
 
                       </ul>
                   </li>
@@ -416,35 +416,313 @@
           </div>
         </div>
         <!-- page start-->
-        Page content goes here
-          <h1>
-              List of Vehicle Movement
-          </h1>
-        <!-- page end-->
+          <div class="row">
+              <div class="col-lg-12">
+                  <section class="panel">
+                      <header class="panel-heading">
+                          Vehicle Movements
+                      </header>
+                      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal">Add New</button>
+
+                      <table class="table table-striped table-advance table-hover">
+                          <tbody>
+                          <tr>
+                              <th><i class="icon_table"></i> Id</th>
+                              <th><i class="icon_table"></i>Vehicle</th>
+                              <th><i class="icon_table"></i>Date</th>
+                              <th><i class="icon_table"></i> Remarks</th>
+                              <th><i class="icon_cogs"></i> Action</th>
+                          </tr>
+                          <tr th:each="vehicleMovement:${vehicleMovement}">
+                              <td th:text="${vehicleMovement.id}">Id</td>
+                              <td th:text="${vehicleMovement.vehicle.name}">Vehicle</td>
+                              <td th:text="${vehicleMovement.date1}">Date</td>
+                              <td th:text="${vehicleMovement.remarks}">Remarks</td>
+                              <td>
+                                  <div class="btn-group">
+                                      <a class="btn btn-primary" id="editButton" th:href="@{/vehicleMovement/findById/(id=${vehicleMovement.id})}"><i class="icon_pencil-edit"></i></a>
+                                      <a class="btn btn-success" id="detailsButton" th:href="@{/vehicleMovement/findById/(id=${vehicleMovement.id})}"><i class="icon_document_alt"></i></a>
+                                      <a class="btn btn-danger"  id="deleteButton" th:href="@{/vehicleMovement/delete/(id=${vehicleMovement.id})}"><i class="icon_close_alt2"></i></a>
+                                  </div>
+                              </td>
+                          </tr>
+                          </tbody>
+                      </table>
+                  </section>
+              </div>
+          </div>
+          <!-- page end-->
       </section>
     </section>
-    <!--main content end-->
-    <div class="text-right">
-      <div class="credits">
-          <!--
-            All the links in the footer should remain intact.
-            You can delete the links only if you purchased the pro version.
-            Licensing information: https://bootstrapmade.com/license/
-            Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
-          -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
-    </div>
+      <!--main content end-->
+      <div class="text-right">
+          <div class="credits">
+              <!--
+                All the links in the footer should remain intact.
+                You can delete the links only if you purchased the pro version.
+                Licensing information: https://bootstrapmade.com/license/
+                Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
+              -->
+
+          </div>
+      </div>
   </section>
   <!-- container section end -->
+
+  <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <form th:action="@{/vehicleMovement/addNew}" method="post">
+          <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">New Movement Record</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+
+                  <div class="modal-body">
+
+                      <div class="form-group">
+                          <label for="idAdd" class="col-form-label">Id:</label>
+                          <input type="text" class="form-control" id="idAdd" name="id" disabled>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="ddlVehicleAdd" class="col-form-label">Vehicle: </label>
+                          <select class="form-control" id="ddlVehicleAdd" name="vehicleid">
+                              <option>-SELECT-</option>
+                              <option th:each="vehicle : ${vehicle}"
+                                      th:value="${vehicle.id}"
+                                      th:text="${vehicle.name}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="ddlLocation1Add" class="col-form-label">Departed from: </label>
+                          <select class="form-control" id="ddlLocation1Add" name="locationid1">
+                              <option>-SELECT-</option>
+                              <option th:each="location : ${location}"
+                                      th:value="${location.id}"
+                                      th:text="${location.description}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="date1Add" class="col-form-label">Departure Date:</label>
+                          <input type="date" class="form-control" id="date1Add" name="date1">
+                      </div>
+
+                      <div class="form-group">
+                          <label for="ddlLocation2Add" class="col-form-label">Arrived at: </label>
+                          <select class="form-control" id="ddlLocation2Add" name="locationid2">
+                              <option>-SELECT-</option>
+                              <option th:each="location : ${location}"
+                                      th:value="${location.id}"
+                                      th:text="${location.description}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="date2Add" class="col-form-label">Arrival date:</label>
+                          <input type="date" class="form-control" id="date2Add" name="date2">
+                      </div>
+
+                      <div class="form-group">
+                          <label for="remarksAdd" class="col-form-label">Remarks:</label>
+                          <input type="text" class="form-control" id="remarksAdd" name="remarks">
+                      </div>
+                  </div>
+
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      <button type="submit" class="btn btn-primary">Save</button>
+                  </div>
+              </div>
+          </div>
+      </form>
+  </div>
+
+  <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+      <form th:action="@{/vehicleMovement/update}" method="put">
+          <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="editModalLabel">Edit Movement Record</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+                  <div class="modal-body">
+
+                      <div class="form-group">
+                          <label for="idEdit" class="col-form-label">Id:</label>
+                          <input type="text" class="form-control" id="idEdit" name="id" readonly>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="ddlVehicleEdit" class="col-form-label">Vehicle: </label>
+                          <select class="form-control" id="ddlVehicleEdit" name="vehicleid">
+                              <option>-SELECT-</option>
+                              <option th:each="vehicle : ${vehicle}"
+                                      th:value="${vehicle.id}"
+                                      th:text="${vehicle.name}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="ddlLocation1Edit" class="col-form-label">Departed from: </label>
+                          <select class="form-control" id="ddlLocation1Edit" name="locationid1">
+                              <option>-SELECT-</option>
+                              <option th:each="location : ${location}"
+                                      th:value="${location.id}"
+                                      th:text="${location.description}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="date1Edit" class="col-form-label">Departure Date:</label>
+                          <input type="date" class="form-control" id="date1Edit" name="date1">
+                      </div>
+
+                      <div class="form-group">
+                          <label for="ddlLocation2Edit" class="col-form-label">Arrived at: </label>
+                          <select class="form-control" id="ddlLocation2Edit" name="locationid2">
+                              <option>-SELECT-</option>
+                              <option th:each="location : ${location}"
+                                      th:value="${location.id}"
+                                      th:text="${location.description}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="date2Edit" class="col-form-label">Arrival date:</label>
+                          <input type="date" class="form-control" id="date2Edit" name="date2">
+                      </div>
+
+                      <div class="form-group">
+                          <label for="remarksEdit" class="col-form-label">Remarks:</label>
+                          <input type="text" class="form-control" id="remarksEdit" name="remarks">
+                      </div>
+
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      <button type="submit" class="btn btn-primary">Save</button>
+                  </div>
+              </div>
+          </div>
+      </form>
+  </div>
+
+  <div class="modal fade" id="detailsModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+      <form>
+          <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="editModalLabel">Movements Details</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+                  <div class="modal-body">
+
+                      <div class="form-group">
+                          <label for="idDetails" class="col-form-label">Id:</label>
+                          <input type="text" class="form-control" id="idDetails" name="id" disabled>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="ddlVehicleDetails" class="col-form-label">Vehicle: </label>
+                          <select class="form-control" id="ddlVehicleDetails" name="vehicleid">
+                              <option>-SELECT-</option>
+                              <option th:each="vehicle : ${vehicle}"
+                                      th:value="${vehicle.id}"
+                                      th:text="${vehicle.name}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="ddlLocation1Details" class="col-form-label">Departed from: </label>
+                          <select class="form-control" id="ddlLocation1Details" name="locationid1">
+                              <option>-SELECT-</option>
+                              <option th:each="location : ${location}"
+                                      th:value="${location.id}"
+                                      th:text="${location.description}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="date1Details" class="col-form-label">Departure Date:</label>
+                          <input type="text" class="form-control" id="date1Details" name="date1">
+                      </div>
+
+                      <div class="form-group">
+                          <label for="ddlLocation2Details" class="col-form-label">Arrived at: </label>
+                          <select class="form-control" id="ddlLocation2Details" name="locationid2">
+                              <option>-SELECT-</option>
+                              <option th:each="location : ${location}"
+                                      th:value="${location.id}"
+                                      th:text="${location.description}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="date2Details" class="col-form-label">Arrival date:</label>
+                          <input type="text" class="form-control" id="date2Details" name="date2">
+                      </div>
+
+                      <div class="form-group">
+                          <label for="remarksDetails" class="col-form-label">Remarks:</label>
+                          <input type="text" class="form-control" id="remarksDetails" name="remarks">
+                      </div>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  </div>
+              </div>
+          </div>
+      </form>
+  </div>
+
+  <div class="modal" tabindex="-1" role="dialog" id="deleteModal">
+      <div class="modal-dialog" role="document">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title">Confirm delete</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+              <div class="modal-body">
+                  <p>Are you sure you want to delete this record?</p>
+              </div>
+              <div class="modal-footer">
+                  <a href="" class="btn btn-primary" id="confirmDeleteButton">Yes, Delete</a>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+          </div>
+      </div>
+  </div>
+
   <!-- javascripts -->
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <!-- nice scroll -->
+  <!-- nicescroll -->
   <script src="js/jquery.scrollTo.min.js"></script>
   <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
   <!--custome script for all page-->
   <script src="js/scripts.js"></script>
+  <script src="js/vehicleMovement.js"></script>
+  <script type="text/javascript" src="static/js/vehicleMovement.js" th:src="@{/js/vehicleMovement.js}"></script>
 
 
 </body>
